console: Fix overflow/scrolling issues

--- a/pkg/webui/console/views/app/app.styl
+++ b/pkg/webui/console/views/app/app.styl
@@ -22,7 +22,7 @@
   flex: 1 1 auto
 
 .content
-  overflow: overlay
+  overflow: hidden
   flex: 1
 
 .header,
